--- a/src/Coffee.css
+++ b/src/Coffee.css
@@ -7,9 +7,7 @@
     padding: 60px;
     margin: 80px;
     text-align: center;
-    width: 200px;
-    height: 5PX;
-    flex-wrap: wrap;
+    height: 2px;
 
 }
 
